# hyprfloat

./: Cargo.toml  LICENSE  README.md  install.sh
assets/41/: client_hyprland_41.rs  hyprland_41.toml
assets/42/: client_hyprland_42.rs  hyprland_42.toml
example/: hf.toml
src/: client.rs  data.rs  hfopen_cache.rs  lib.rs
