#![ allow( dead_code, unused_imports ) ]

[package]
name = "hyprfloat"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyprfloat"
path = "src/lib.rs"

[lib.data]
mane = "data"
path= "src/data.rs"


[[bin]]
name = "hfmovewindow"
path = "src/bin/hfmovewindow.rs"

[[bin]]
name = "hfopen"
path = "src/bin/hfopen.rs"

[[bin]]
name = "hfresizeactive"
path = "src/bin/hfresizeactive.rs"

[[bin]]
name = "hftogglefloating"
path = "src/bin/hftogglefloating.rs"


[dependencies]
fork = "0.2.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
toml = "0.8"
serde = "1.0"
directories = "5.0"
rand = "0.9.0-alpha.2"
lazy_static = "1.5"
simple-home-dir = "0.4"


[profile.release]
target_os = "linux"
opt-level = "s"
lto = true
codegen-units = 16
panic = "abort"
debug = 0
