[package]
name = "hyprfloat"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyprfloat"
path = "src/lib.rs"

[[bin]]
name = "hfmovewindow"
path = "src/bin/hfmovewindow.rs"

[[bin]]
name = "hfopen"
path = "src/bin/hfopen.rs"

[[bin]]
name = "hfresizeactive"
path = "src/bin/hfresizeactive.rs"

[[bin]]
name = "hftogglefloating"
path = "src/bin/hftogglefloating.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
toml = "0.8"
serde = "1.0"
directories = "5.0"
rand = "0.9.0-alpha.0"
lazy_static = "1.5"
simple-home-dir = "0.4"


[profile.release]
opt-level = 3
lto = true
codegen-units = 16
panic = "abort"
debug = 0
